--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Flutter documentation",
   "description": "Searches the selected o right clicked word in docs.flutter.io",
-  "version": "1.0.2",
+  "version": "1.0.3",
   
   "background": {
     "scripts": ["flutter_doc.js"]
@@ -14,13 +14,17 @@
   },
 
   "permissions": [
-    "tabs", "contextMenus"
+    "tabs", "storage", "contextMenus"
   ],
   
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["all_urls.js"]
+    },
+    {
+      "matches": ["https://docs.flutter.io/*"],
+      "js": ["docs_flutter_io.js"]
     }
   ]
 }
