--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Flutter documentation",
   "description": "Searches the selected o right clicked word in docs.flutter.io",
-  "version": "1.1",
+  "version": "1.2",
   
   "background": {
     "scripts": ["flutter_doc.js"]
@@ -16,6 +16,10 @@
   "permissions": [
     "tabs", "storage", "contextMenus"
   ],
+
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   
   "content_scripts": [
     {
